package base;

option java_package = "netmsg";

message Vect2 {
  required sint32 x = 1;
  required sint32 y = 2;
}

message Bounds {
  required Vect2 start = 1;
  required Vect2 end = 2; // Inclusive
}

message UUID {
  required fixed64 mostSignificant = 1;
  required fixed64 leastSignificant = 2;
}

message ValWithMax {
  required uint32 current = 1;
  required uint32 maximum = 2;
}

message Range {
  required uint32 start = 1;
  required uint32 end = 2; // Inclusive
}

message Timestamp {
  required uint64 timestamp = 1;
}