package messages;

option java_package = "netmsg";

import "game.proto";

message FromClient {
  optional game.FromClient game = 1;
}

message FromServer {
  optional game.FromServer game = 1;  
}
